@@ -161,7 +161,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
         name= _ "female^Silver Mage"
         gender=female
         image="units/human-magi/silver-mage+female.png"
-        profile="portraits/humans/mage-silver+female.png~LEFT()"
+        profile="portraits/humans/mage-silver+female.png"
         die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
         {DEFENSE_ANIM "units/human-magi/silver-mage+female-defend.png" "units/human-magi/silver-mage+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
         [attack_anim]
